# sr-engine

./: .gitignore  Cargo.toml
shaders/: Deferred.frag  Deferred.vert  DeferredLightning.frag  DeferredLightning.vert  ShadowMap.vert  base.frag  base.vert  composite.frag  composite.vert  shaders.bat  shaders.sh  unlit.frag  unlit.vert
src/: buffer.rs  buffer_manager.rs  camera.rs  command_buffer.rs  command_buffer_helpers.rs  deferred_lightning_render_pass.rs  deferred_render_pass.rs  draw_data.rs  frame_worker.rs  image.rs  main.rs  mesh.rs  patched_sphere.rs  pipeline.rs  pipeline_manager.rs  push_constants_data.rs  render_pass_attachment_output.rs  renderer.rs  shader_manager.rs  shadow_map_render_pass.rs  vertex.rs
