[package]
name = "sr-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.30.5"
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
raw-window-handle = "0.6.2"
nalgebra = "0.33.2"
gpu-allocator = "0.27.0"
shaderc = "0.8.3"